Add the new doc.